--- a/storyPlayer.html
+++ b/storyPlayer.html
@@ -12,8 +12,8 @@
 <body class="Story-Player">
 
     <!-- Story Player -->
-    <div id="story-box">
-        <img id="background"   class="bg" src="imgs/bg/test_1.png">
+    <div id="Story-box">
+        <img id="Background"   class="background" src="/imgs/bg/empty.jpg">
         
         <div id="Character_Container"
             style="position:absolute;
@@ -24,7 +24,7 @@
                     transform: translate(-50%, -50%);">
         </div>
 
-        <div id="overlay"   class="overlay"></div>
+        <div id="Overlay"   class="overlay" style=""></div>
         <div id="Text"
             style="text-align: right;
                     color: #aaaaaa;
@@ -35,20 +35,15 @@
                     font-size: calc(var(--true-height) *.05);
                     font-weight: normal;
                     position: absolute;">
-            <div id="speaker"     class="speaker">
-            Kezia
-            </div>
-            <p id="Dialouge"    class="dialouge"> 
-                This is a sample paragraph to demonstrate the current theme. 
-            </p>
+            <div id="Speaker"     class="speaker"></div>
+            <div id="Dialouge"    class="dialouge"></div>
         </div>
         <div id="Voice"   
             class="voice"
-            style="visibility: hidden;"> 
-            Testing Voice...
+            style="opacity: 1;"> 
         </div>
     
-        <div onclick="nextFrame()"
+        <div id="SB_interactions"  onclick="nextFrame()"
             style="position: absolute;
                     width: 100%;
                     height: 100%;">
@@ -147,6 +142,7 @@
 
     </div>
 
+    <script src="Scripts/Animations.js"></script>
     <script src="Scripts/Utils.js"></script>
     <script src="Scripts/storyPlayer_UI.js"></script>
     <script src="Scripts/storyPlayer.js"></script>
