Fixed inverted slashes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="light-theme">
-    <img id="LS" class="loadingScreen" src="imgs\UI\maxresdefault.jpg">
+    <img id="LS" class="loadingScreen" src="imgs/UI/maxresdefault.jpg">
     <h1>Arknights Story Player Test</h1>
     <h2>Task List</h2>
     <p id="msg">Current tasks:</p>
