--- a/storyPlayer.html
+++ b/storyPlayer.html
@@ -177,7 +177,7 @@
         </div>
 
     </div>
-    <img id="LS" class="loadingScreen" src="imgs\UI\maxresdefault.jpg">
+    <img id="LS" class="loadingScreen" src="imgs/UI/maxresdefault.jpg">
 
     <script src="Scripts/storyPlayer_Animations.js"></script>
     <script src="Scripts/storyPlayer_Utils.js"></script>
