--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </div>
     <a href="storyPlayer.html">
         <img src="imgs/Favicons/HeartDash_Favicon.png" alt="HeartDash Story" style="width:5%; height: 5%;">
+        HeartDash
     </a>
 
     <script src="app.js"></script>
