--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div>
         <button class="btn">Dark</button>
     </div>
-    <a href="storyPlayer.html">
+    <a class="btn_Stories" href="Relight.json">
         <img src="imgs/Favicons/HeartDash_Favicon.png" alt="HeartDash Story" style="width:5%; height: 5%;">
         HeartDash
     </a>
