--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="Main/main.css">
 </head>
 
 <body class="light-theme">
@@ -26,7 +26,7 @@
         HeartDash
     </a>
 
-    <script src="app.js"></script>
+    <script src="Main/app.js"></script>
     
     <noscript>You need to enable JavaScript to view the full site.</noscript>
 </body>
