Implemented Tab Name Changes.

--- a/eventMenu.html
+++ b/eventMenu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="Vignette Menu" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Event Menu</title>
     <link rel="stylesheet" href="./EventMenu/eventMenu_styles.css">
     <link rel="icon" type="image/x-icon" href="/imgs/Favicons/HeartDash_Favicon.png">
 </head>
