Finalized Event Menu setup and loading. Cleaned up file organization and consolidated img assets.

--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 </head>
 
 <body class="light-theme">
-    <img id="LS" class="loadingScreen" src="imgs\UI\maxresdefault.jpg">
     <h1>Arknights Story Player Test</h1>
     <h2>Task List</h2>
     <p id="msg">Current tasks:</p>
 
     <ul>
-        <li class="list">Add main page visuals</li>
         <li class="list">Create a story selection page for Arknights stories</li>
     </ul>
     <div>
         <button class="btn">Dark</button>
     </div>
-    <a class="btn_Stories" href="Relight.json">
+    <a class="btn_Stories" href="Relight">
         <img src="imgs/Favicons/HeartDash_Favicon.png" alt="HeartDash Story" style="width:5%; height: 5%;">
         HeartDash
     </a>
+
+    <img id="LS" class="loadingScreen" src="imgs\UI\maxresdefault.jpg">
 
     <script src="Main/app.js"></script>
     
