--- a/eventMenu.html
+++ b/eventMenu.html
@@ -17,19 +17,32 @@
         <img id="store" class="UI" data-url="https://yostar.store/collections/arknights" data-target="">
         <img id="goals" class="UI" data-url="" data-target="">
         <img id="stages" class="UI" data-url="" data-target="">
-        <img id="extra" class="UI" data-url="vignetteMenu.html" data-target="Relight.json">
+        <img id="extra" class="UI" data-url="vignetteMenu.html" data-target="Relight">
         <img id="medals" class="UI" data-url="" data-target="">
         <img id="newOps" class="UI" data-url="" data-target="">
+
+        <img id="inspect" src="./EventMenu/imgs/img_detail.png" data-url="" data-target="">
+
         <p id="trust"> Earn 50% more Trust during the event!</p>
+
+        <img id="Back" src="./EventMenu/imgs/btn_backbutton.png"
+            style="position: absolute;
+                top: 1ch; 
+                left: 1ch; 
+                height: 7%;"
+            data-url="index.html"
+            data-target="">
+
+        <img id="Home" src="./EventMenu/imgs/btn_topmenu_home.png"
+            style="position: absolute;
+                top: 1ch; 
+                left: 17.625ch; 
+                height: 7%;"
+            data-url="index.html"
+            data-target="">
     </div>
 
-    <img id="Back" src="./imgs/UI/btn_backbutton.png"
-        style="position: absolute;
-            top: 10px; 
-            left: 10px; 
-            width: 10%;"
-        data-url="index.html"
-        data-target="">
+
 
     <img id="LS" class="loadingScreen" src="imgs/UI/maxresdefault.jpg">
 
