--- a/storyPlayer.html
+++ b/storyPlayer.html
@@ -78,12 +78,12 @@
                 <input type="image"
                     id="Cancel"
                     class="Skip_Icons"
-                    src="./imgs/UI/cross.png"
+                    src="./StoryPlayer/imgs/cross.png"
                     style="left: 39.5%">
                 <input type="image"
                     id="End"
                     class="Skip_Icons"
-                    src="./imgs/UI/check-mark.png"
+                    src="./StoryPlayer/imgs/check-mark.png"
                     style="right: 39.5%;"
                     onclick="endStory()">
                 <div class="Line"
@@ -101,7 +101,7 @@
         <input  class="UI_element" 
             type="image" 
             id="Show_Transcript" 
-            src="./imgs/UI/transcription.png" 
+            src="./StoryPlayer/imgs/transcription.png" 
             alt="Dialouge transcription"
             style=" width: 2.5%;
                     left: 3%;
@@ -111,7 +111,7 @@
         <input  class="UI_element" 
             type="image" 
             id="UI_vis" 
-            src="./imgs/UI/hide.png" 
+            src="./StoryPlayer/imgs/hide.png" 
             alt="Hide UI"
             style=" width: 2.5%;
                     left: 8%;"
