--- a/vignetteMenu.html
+++ b/vignetteMenu.html
@@ -4,20 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="Vignette Menu" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>vignetteMenu</title>
     <link rel="stylesheet" href="./VignetteMenu/vignetteMenu_styles.css">
     <link rel="icon" type="image/x-icon" href="/imgs/Favicons/HeartDash_Favicon.png">
 </head>
 
 <body id="base" class="Menu">
     <img id="bgOverlay">
-    <img id="banner" class="banner" src="./imgs/UI/storyPic_act9mini.png" alt="HeartDash Banner">
+    <img id="banner" class="banner" alt="HeartDash Banner">
     <div id="stories" class="stories"></div>
-    <img id="Back" src="./imgs/UI/btn_backbutton.png"
+    <img id="Back" src="./VignetteMenu/imgs/btn_backbutton.png"
         style="position: absolute;
-            top: 10px; 
-            left: 10px; 
-            width: 10%;">
+            top: 1ch; 
+            left: 1ch; 
+            height: 7%;">
+    <img id="Home" src="./VignetteMenu/imgs/btn_topmenu_home.png"
+        style="position: absolute;
+            top: 1ch; 
+            left: 17.625ch; 
+            height: 7%;">
 
     <img id="LS" class="loadingScreen" src="imgs/UI/maxresdefault.jpg">
 
