Refined story player commands further.

--- a/eventMenu.html
+++ b/eventMenu.html
@@ -12,6 +12,7 @@
 <body id="base">
     <div id="menu" class="menu">
         <img id="background" class="bg">
+        <img id="banner" class="UI">
         <img id="currency" class="UI">
         <p id="currencyAmount" class="UI"> 999 </p>
         <img id="store" class="UI" data-url="https://yostar.store/collections/arknights" data-target="">
