--- a/storyPlayer.html
+++ b/storyPlayer.html
@@ -12,17 +12,24 @@
 <body class="Story-Player">
     <!-- Story Player -->
     <div id="Story-box">
-        <img id="Background"   class="background" src="./imgs/bg/empty.jpg">
-        
-        <div id="Container"
-            style="position:absolute;
+        <div id="Items"
+            style="position: absolute;
                     width: 100%;
                     height: 100%;
-                    top: 50%;
-                    left: 50%;
-                    transform: translate(-50%, -50%);">
+                    top: 0%;
+                    bottom: 0%;
+                    left: 0%;
+                    right: 0%;">
+            <img id="Background"   class="background" src="./imgs/bg/empty.jpg">
+            <div id="Container"
+                style="position:absolute;
+                        width: 100%;
+                        height: 100%;
+                        top: 50%;
+                        left: 50%;
+                        transform: translate(-50%, -50%);">
+            </div>
         </div>
-
         <div id="Overlay"   class="overlay"></div>
         <div id="Text"
             style="text-align: right;
@@ -41,6 +48,8 @@
             class="voice"
             style="opacity: 1;"> 
         </div>
+
+        <div id="Blocker"   class="blocker"></div>
     
         <div id="SB_interactions"  onclick="nextFrame()"
             style="position: absolute;
