Implemented further story commands, and resolved UI spacing issues.

--- a/eventMenu.html
+++ b/eventMenu.html
@@ -26,21 +26,25 @@
 
         <p id="trust"> Earn 50% more Trust during the event!</p>
 
-        <img id="Back" src="./EventMenu/imgs/btn_backbutton.png"
+        <div id="Header"
             style="position: absolute;
-                top: 1ch; 
-                left: 1ch; 
-                height: 7%;"
-            data-url="index.html"
-            data-target="">
+                top: 1ch;
+                left: 1ch;
+                height: 7%;
+                display: flex;
+                flex-direction: row;
+                justify-content: flex-start;">
+            <img id="Back" src="./EventMenu/imgs/btn_backbutton.png"
+                style="height: 100%;"
+                data-url="index.html"
+                data-target="">
 
-        <img id="Home" src="./EventMenu/imgs/btn_topmenu_home.png"
-            style="position: absolute;
-                top: 1ch; 
-                left: 17.625ch; 
-                height: 7%;"
-            data-url="index.html"
-            data-target="">
+            <img id="Home" src="./EventMenu/imgs/btn_topmenu_home.png"
+                style="height: 100%;"
+                data-url="index.html"
+                data-target="">
+        </div>
+
     </div>
 
 
