Implemented a Fullscreen button for the story player.

--- a/storyPlayer.html
+++ b/storyPlayer.html
@@ -98,6 +98,24 @@
                     left: 8%;"
             onclick="UIToggle()">
 
+        <input class="UI_element"
+            type="image"
+            id="Fullscreen"
+            src="./StoryPlayer/imgs/fullscreen.png"
+            alt="Fullscreen"
+            style=" width: 2.5%;
+                    left: 13%;"
+            onclick="changeScreenState()">
+
+        <input class="UI_element"
+            type="image"
+            id="Minscreen"
+            src="./StoryPlayer/imgs/minscreen.png"
+            alt="Fullscreen"
+            style=" width: 2.5%;
+                    left: 13%;"
+            onclick="changeScreenState()">
+
         <button class="UI_element"
             id="Auto"
             style=" font-weight: normal;
