Implemented better vignette sorting display. Further UI cleanup for event menu.

--- a/eventMenu.html
+++ b/eventMenu.html
@@ -13,16 +13,17 @@
     <div id="menu" class="menu">
         <img id="background" class="bg">
         <img id="banner" class="UI">
-        <img id="currency" class="UI">
+        <img id="currency" class="UI" alt="Event Currency">
         <p id="currencyAmount" class="UI"> 999 </p>
-        <img id="store" class="UI" data-url="https://yostar.store/collections/arknights" data-target="">
-        <img id="goals" class="UI" data-url="" data-target="">
-        <img id="stages" class="UI" data-url="" data-target="">
-        <img id="extra" class="UI" data-url="vignetteMenu.html" data-target="Relight">
-        <img id="medals" class="UI" data-url="" data-target="">
-        <img id="newOps" class="UI" data-url="" data-target="">
+        <img id="store" class="UI" alt=">Event Store" data-url="https://yostar.store/collections/arknights" data-target="">
+        <img id="goals" class="UI" alt="xEvent Missions" data-url="" data-target="">
+        <img id="stages" class="UI" alt="xEvent Stages" data-url="" data-target="">
+        <img id="extra" class="UI" alt=">Event Extras" data-url="vignetteMenu.html" data-target="Relight">
+        <img id="medals" class="UI" alt="xMedals" data-url="" data-target="">
+        <img id="newOps" class="UI" alt="xNew Operators" data-url="" data-target="">
 
         <img id="inspect" src="./EventMenu/imgs/img_detail.png" data-url="" data-target="">
+        <p id="checkOps"> NEW OPERATORS</p>
 
         <p id="trust"> Earn 50% more Trust during the event!</p>
 
