Updated old story scripts to new story commands.

--- a/storyPlayer.html
+++ b/storyPlayer.html
@@ -26,6 +26,8 @@
         </div>
 
         <div id="Blocker" class="blocker"></div>
+
+        <p id="Watermark" class="watermark"></p>
     
         <div id="SB_interactions" class="fill" onclick="nextFrame()">
         </div>
