Fixed Favicon issues.

--- a/eventMenu.html
+++ b/eventMenu.html
@@ -6,7 +6,7 @@
     <meta name="Vignette Menu" content="width=device-width, initial-scale=1.0">
     <title>Event Menu</title>
     <link rel="stylesheet" href="./EventMenu/eventMenu_styles.css">
-    <link rel="icon" type="image/x-icon" href="/imgs/Favicons/HeartDash_Favicon.png">
+    <link rel="icon" type="image/x-icon" href="./imgs/Favicons/HeartDash_Favicon.png">
 </head>
 
 <body id="base">
