--- a/vignetteMenu.html
+++ b/vignetteMenu.html
@@ -6,7 +6,7 @@
     <meta name="Vignette Menu" content="width=device-width, initial-scale=1.0">
     <title>vignetteMenu</title>
     <link rel="stylesheet" href="./VignetteMenu/vignetteMenu_styles.css">
-    <link rel="icon" type="image/x-icon" href="/imgs/Favicons/HeartDash_Favicon.png">
+    <link rel="icon" type="image/x-icon" href="./imgs/Favicons/HeartDash_Favicon.png">
 </head>
 
 <body id="base" class="Menu">
