--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
 
     <ul>
         <li class="list">Create a story selection page for Arknights stories</li>
+        <li class="list">Casette Futurism</li>
+        <li class="list">Lone Trail Style</li>
+        <li class="list">Arknights/ HSR</li>
+        <li class="list">Bueracratic</li>
+        <li class="list">International Topographic Style</li>
+        <li class="list">Cad Drawing's</li>
+        <li class="list">Typewriter</li>
+        <li class="list">Retrofuturism (2020s instead of 1980s)</li>
+        <li class="list">DFMA</li>
+        <li class="list">https://store.steampowered.com/app/504210/SHENZHEN_IO/</li>
+        <li class="list">Digikey DataSheets</li>
     </ul>
     <div>
         <button class="btn">Dark</button>
